Создано с помощью Colaboratory

--- a/Course_MSU.ipynb
+++ b/Course_MSU.ipynb
@@ -6,7 +6,7 @@
       "name": "Course_MSU.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO3BTP/3YGDlTSI70aio7cI",
+      "authorship_tag": "ABX9TyPf5iv5yYa/TnrK9gO9eAhP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -479,16 +479,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "41lfWJRsmJ7M",
-        "outputId": "aecbf761-a0ed-468a-9880-eb661a4b0d7f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "aecbf761-a0ed-468a-9880-eb661a4b0d7f"
       },
       "source": [
         "b = int(input(),2)\n",
         "print(b)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -515,10 +515,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Hxi297sSnRao",
-        "outputId": "156e2413-d101-43e8-a161-34444f62807a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "156e2413-d101-43e8-a161-34444f62807a"
       },
       "source": [
         "from fractions import Fraction\n",
@@ -541,7 +541,7 @@
         "c = Fraction(cn, cd)\n",
         "print(round(float(b/a + b/(a+c) - c/(c-a)),4))"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -566,10 +566,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "utQbufiSsfMI",
-        "outputId": "c1e9df83-06f3-41a2-cb63-4530211d43b9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c1e9df83-06f3-41a2-cb63-4530211d43b9"
       },
       "source": [
         "file = open('input.txt', 'w')\n",
@@ -583,7 +583,7 @@
         "    k +=1\n",
         "print(k,sum)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -607,10 +607,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "00vG6cfdvFlD",
-        "outputId": "40b13de6-a006-4470-fd04-6124e3fba50e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "40b13de6-a006-4470-fd04-6124e3fba50e"
       },
       "source": [
         "b1, q, a = input().split()\n",
@@ -622,7 +622,7 @@
         "    bn = b1*q**(n-1)\n",
         "print(n)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -647,10 +647,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "ka57WJayzmMK",
-        "outputId": "ed853bcd-2a82-44e9-e989-aeca4798e61e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ed853bcd-2a82-44e9-e989-aeca4798e61e"
       },
       "source": [
         "amount, period, rate = input().split()\n",
@@ -669,7 +669,7 @@
         "    print(f\"{loan_months}, {amount:0.2f}, {profit:0.2f}\", file=csv_file)\n",
         "    "
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -679,6 +679,141 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Fw1uzGlFvfmb"
+      },
+      "source": [
+        "# **ЛЕКЦИЯ 5**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XYB27qlqvjSP"
+      },
+      "source": [
+        "3. Для игры в американский футбол собрались 22 мальчика с разным весом. Их вес (у всех он разный) и их имена (тоже у всех разные) даны в текстовом файле. Требуется создать две команды следующим образом: отсортировать всех ребят по убыванию веса, а затем 1-го, 3-го, 5-го и т.д. игроков отобрать в 1-ю команду, а оставшихся — во 2-ю команду. Вывести список команды №1 в первые 11 строк файла team.txt, а список команды №2 в последние 11 строк файла team.txt. В списках команд указывать и имена, и значения веса."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qVeWIIzHvmmu"
+      },
+      "source": [
+        "file = open('weights.txt')\n",
+        "lines = [line.strip().split() for line in file]\n",
+        "lines_sorted = sorted(lines, reverse=True, key=lambda x: float(x[1]))\n",
+        "team_1 = []\n",
+        "team_2 = []\n",
+        "team_1 = lines_sorted[0::2]\n",
+        "team_2 = lines_sorted[1::2]\n",
+        "f = open('team.txt','w')\n",
+        "for s in team_1:\n",
+        "    f.write(str(s[0]) + ' ' + str(s[1]) +'\\n')\n",
+        "for s in team_2:\n",
+        "    f.write(str(s[0]) + ' ' + str(s[1]) +'\\n')\n",
+        "f.close()\n",
+        "file.close()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UvzCK6Zuvsz6"
+      },
+      "source": [
+        "4. Журналист обнаружил в архиве ранее не публиковавшуюся шифровку Эдгара Алана По poe_unpublished.txt. Чтобы не просто представить её публике, а совершить сенсацию, он хочет расшифровать её и для этого нанял вас. Вы разобрались, что в тексте намеренно перепутаны строки, а в каждой строке перепутаны слова. Для применения алгоритма расшифрования нужно упорядочить строки по возрастанию количества слов в каждой строке (слова разделяются пробелами), а внутри каждой строки слова нужно упорядочить по количеству букв в них. Результат нужно сохранить в файл poe_decode_attempt.txt"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0TeGCN4_vwtG"
+      },
+      "source": [
+        "file = open('poe_unpublished.txt')\n",
+        "lines = [line.strip() for line in file]\n",
+        "lines_sorted = sorted(lines,reverse=True)\n",
+        "f = open('poe_decode_attempt.txt','w')\n",
+        "for line in lines_sorted:\n",
+        "     line_sorted = sorted(line.split(), key = len)\n",
+        "     f.write(' '.join(line_sorted) + '\\n')\n",
+        "f.close()\n",
+        "file.close()"
+      ],
+      "execution_count": 104,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AY1MoJ49zNGN"
+      },
+      "source": [
+        "5. Биолог провёл исследование устойчивости нескольких видов бактерий стрептококка к нескольким антибиотикам и получил численные оценки, характеризующие эффективность действия каждого препарата. Его данные хранятся в формате текстовой таблицы дробных чисел (с плавающей точкой) med_research.txt, при этом по горизонтали изменяются виды бактерий, а по вертикали — виды антибиотиков. Однако для отчёта требуется, чтобы виды антибиотиков шли по горизонтали, а виды бактерий — по вертикали. Биолог узнал, что эта операция называется в математике транспонированием, но он не знает, как её сделать автоматически. Если вы не поможете, то ему предстоит провести ночь, вручную переставляя числа в огромном листе. В файле хранятся только сами числа. Список видов бактерий и список антибиотиков вас не интересуют, биолог вставит их сам."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "39_boLIIzaFQ"
+      },
+      "source": [
+        "file = open('med_research.txt')\n",
+        "lines = [line.strip().split() for line in file]\n",
+        "rez = [[lines[j][i] for j in range(len(lines))] for i in range(len(lines[0]))]\n",
+        "f = open('output.txt','w')\n",
+        "for row in rez:\n",
+        "    f.write(' '.join(row) + '\\n')\n",
+        "file.close()\n",
+        "f.close()"
+      ],
+      "execution_count": 84,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jzWCV9Ak2Vj1"
+      },
+      "source": [
+        "6. Руководитель хочет узнать, какой из двух его заместителей A или B больше времени тратит на звонки по телефону. Для этого он установил шпионское ПО на их смартфоны и получил файл the_calls.txt, в котором для каждого звонка по телефону указано: дата в формате YYYY.MM.DD, длительность звонка в секундах (целое число), буква A или B, а также номер телефона, на который был совершён звонок (без пробелов, но со значком + и скобками). Поля в строке разделяются знаком табуляции.\n",
+        "\n",
+        "Руководителю более подозрительны звонки, длившиеся дольше всего, поэтому строки следует отсортировать в обратном порядке по длительности звонка (сначала самые длительные).\n",
+        "\n",
+        "Распределите строки из файла на два упорядоченных указанным образом списка, и запишите их в файл calls.txt: Сначала группу звонков A, затем - группу звонков B."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9u59rF5l2Yu1"
+      },
+      "source": [
+        "file = open('the_calls.txt')\n",
+        "lines = [line.strip().split() for line in file]\n",
+        "lines_sorted = sorted(lines, reverse=True, key=lambda x: float(x[1]))\n",
+        "f = open('calls.txt','w')\n",
+        "calls_A = ''\n",
+        "calls_B = ''\n",
+        "for line in lines_sorted:\n",
+        "  if line[2] == 'A':\n",
+        "    calls_A = calls_A +'\\t'.join(line) + '\\n'\n",
+        "  else:\n",
+        "    calls_B = calls_B +'\\t'.join(line) + '\\n'\n",
+        "f.write(calls_A)\n",
+        "f.write(calls_B)\n",
+        "file.close()\n",
+        "f.close()"
+      ],
+      "execution_count": 94,
+      "outputs": []
     }
   ]
 }
