Создано с помощью Colaboratory

--- a/Course_MSU.ipynb
+++ b/Course_MSU.ipynb
@@ -6,7 +6,7 @@
       "name": "Course_MSU.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPf5iv5yYa/TnrK9gO9eAhP",
+      "authorship_tag": "ABX9TyMOesMRNAPfYP2jqgLeI6aR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -747,7 +747,7 @@
         "f.close()\n",
         "file.close()"
       ],
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -774,7 +774,7 @@
         "file.close()\n",
         "f.close()"
       ],
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -812,8 +812,109 @@
         "file.close()\n",
         "f.close()"
       ],
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oJgNRCFPXwOn"
+      },
+      "source": [
+        "# **ЛЕКЦИЯ 6**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9QvP9Ao4XxQP"
+      },
+      "source": [
+        "5. В определенном зоопарке находятся животные, каждому из которых присвоены следующие параметры:\n",
+        "ID, вид, пол, кличка, дата рождения и дата поступления в зоопарк. Исходя из этих данных, вывести все виды животных, которые есть в данном зоопарке."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dyKGUkJQX0uh",
+        "outputId": "eabf6722-fed6-4d4b-bab8-6e2d5df30ba5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "with open('input.txt') as file:\n",
+        "    lines = [line.strip().split() for line in file]\n",
+        "    animals = []\n",
+        "    for line in lines:\n",
+        "        if animals.count(line[1]) == 0:\n",
+        "            animals.append(line[1])\n",
+        "    sorted_animals = sorted(animals, key = len)\n",
+        "    print(*sorted_animals, sep = '\\n')"
+      ],
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "leopard\n",
+            "orangutan\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "st_3g_OPaeMN"
+      },
+      "source": [
+        "6. В определенном зоопарке находятся животные, каждому из которых присвоены следующие параметры:\n",
+        "ID, вид, пол, кличка, дата рождения и дата поступления в зоопарк. Исходя из этих данных, вывести все виды животных, которые могут размножаться в данном зоопарке (то есть виды животных, которые представлены в зоопарке как мужским, так и женским полом)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GsSGWC80afda",
+        "outputId": "25b05523-b238-40ac-d933-47ffae3c0695",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "with open('input.txt') as file:\n",
+        "    lines = [line.strip().split() for line in file]\n",
+        "    animals_m = []\n",
+        "    animals_f = []\n",
+        "    animals_m_f = []\n",
+        "    for line in lines:\n",
+        "        if  line[2] == 'male':\n",
+        "            animals_m.append(line[1])\n",
+        "        else:\n",
+        "            animals_f.append(line[1])\n",
+        "    for animal in animals_m:\n",
+        "        if animal in animals_f:\n",
+        "          animals_m_f.append(animal)\n",
+        "          continue\n",
+        "        print('0')\n",
+        "        break\n",
+        "    sorted_animals = sorted(animals_m_f, key = len)\n",
+        "    print(*sorted_animals, sep = '\\n')"
+      ],
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "\n"
+          ]
+        }
+      ]
     }
   ]
 }
